# variational_harmonic

./: README.md  pyproject.toml
src/variational_harmonic/: __init__.py  viz.py
