[project]
name = "variational-harmonic"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alok Singh", email = "alokbeniwal@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "jaxtyping>=0.2.33",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "plotly>=5.23.0",
    "nbformat>=5.10.4",
    "pythreejs>=2.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/variational_harmonic"]
